# leda-rs

./: .gitignore  Cargo.toml
src/: H_Q_matrices_generation.rs  aes256.rs  api.rs  bf_decoding.rs  constant_weight_codec.rs  consts.rs  crypto.rs  dfr_test.rs  djbsort.rs  encrypt.rs  gf2x_arith.rs  gf2x_arith_mod_xPplusOne.rs  lib.rs  main.rs  marshalling.rs  mceliece_cca2_decrypt.rs  mceliece_cca2_encrypt.rs  mceliece_keygen.rs  rng.rs  sha3_fallback.rs  types.rs
src/main/: H_Q_matrices_generation.rs  aes256.rs  bf_decoding.rs  constant_weight_codec.rs  dfr_test.rs  djbsort.rs  encrypt.rs  gf2x_arith.rs  gf2x_arith_mod_xPplusOne.rs  marshalling.rs  mceliece_cca2_decrypt.rs  mceliece_cca2_encrypt.rs  mceliece_keygen.rs  rng.rs  sha3_fallback.rs  test.rs
tests/: kat.rs
