[package]
name = "leda-rs"
version = "0.1.0"
authors = ["Jack Lloyd <jack.lloyd@fortanix.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 2

[dependencies]
mbedtls = "0.5"
libc = "0.2"
rustc-serialize = "0.3.19"
sha3 = "0.8"
